# adventofcode

./: README.md
2023/02/: main.py
2023/03/: main.py
2023/07/: main.py
2023/08/: main.py
2023/09/: main.py
2023/1/: main.py
2023/10/: main.py
2023/11/: main.py
2023/12/: main.py
2023/13/: main.py
2023/14/: main.py
2023/15/: main.py
2023/16/: main.py
2023/17/: main.py
2023/18/: main.py
2023/19/: .input-small.txt.swp  main.py
2023/2/: main.py
2023/20/: main.py
2023/21/: main.py
2023/22/: main.py
2023/23/: main.py
2023/24/: main.py
2023/25/: main.py
2023/3/: main.py
2023/4/: main.py
2023/5/: .input.txt.swp  main.py
2023/6/: main.py
2023/7/: main.py
2023/8/: main.py
2023/9/: main.py
2025/: .gitignore  CMakeLists.txt
2025/01/: main.cpp
2025/02/: main.cpp
2025/03/: main.cpp
2025/04/: main.cpp
2025/05/: main.cpp
2025/06/: main.cpp
2025/07/: main.cpp
2025/08/: main.cpp
2025/09/: main.cpp
2025/10/: main.cpp
2025/11/: input.txt  main.cpp
2025/12/: main.cpp
