cmake_minimum_required(VERSION 3.31)
project(2025)

set(CMAKE_CXX_STANDARD 17)

add_executable(2025-01
        01/main.cpp)
add_executable(2025-02
        02/main.cpp)
add_executable(2025-03
        03/main.cpp)
add_executable(2025-04
        04/main.cpp)
add_executable(2025-05
        05/main.cpp)
add_executable(2025-06
        06/main.cpp)
add_executable(2025-07
        07/main.cpp)
add_executable(2025-08
        08/main.cpp)
add_executable(2025-09
        09/main.cpp)
add_executable(2025-10
        10/main.cpp)
add_executable(2025-11
        11/main.cpp)
add_executable(2025-12
        12/main.cpp)
